# reversi

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
reversi-agent/: Cargo.toml  LICENSE
reversi-agent/src/: lib.rs  utils.rs
src/: index.html  main.ts  style.css
