[package]
name = "reversi-agent"
version = "1.0.0"
authors = ["Yunhao Qian"]
edition = "2021"
description = "Game-playing agent of Reversi using the minimax algorithm"
repository = "github.com/yunhao-qian/reversi"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.81"

[profile.release]
lto = true
